# alg_labs

./: CMakeLists.txt
lab10/: A.cpp  B.cpp  C.cpp  D.cpp  E.cpp  F.cpp
lab11/: A.cpp  B.cpp  E.cpp  F.cpp
lab12/: A.cpp  C.cpp  E.cpp
lab2/: C.cpp  E.cpp  H.cpp  I.cpp  J.cpp  K.cpp
lab3/: A.cpp  B.cpp  C.cpp  D.cpp  E.cpp  F.cpp  G.cpp
lab4/: A.cpp  B.cpp  C.cpp  D.cpp
lab5/: A.cpp  B.cpp  C.cpp  D.cpp  E.cpp  F.cpp
lab6/: A.cpp  B.cpp
lab7/: B.cpp  C.cpp
lab8/: A.cpp  B.cpp  C.cpp  F.cpp
lab9/: A.cpp  B.cpp  C.cpp  D.cpp
other_code/: test.cpp
