cmake_minimum_required(VERSION 3.23)
project(alg_labs)



add_executable(H lab2/H.cpp)
add_executable(I lab2/I.cpp)
add_executable(J lab2/J.cpp)
add_executable(K lab2/K.cpp)

add_executable(A lab3/A.cpp)
add_executable(B lab3/B.cpp)
add_executable(C lab3/C.cpp)
add_executable(D lab3/D.cpp)
add_executable(E lab3/E.cpp)
add_executable(F lab3/F.cpp)

add_executable(test other_code/test.cpp)

