cmake_minimum_required(VERSION 3.23)
project(alg_labs)



add_executable(H2 lab2/H.cpp)
add_executable(I2 lab2/I.cpp)
add_executable(J2 lab2/J.cpp)
add_executable(K2 lab2/K.cpp)

add_executable(A3 lab3/A.cpp)
add_executable(B3 lab3/B.cpp)
add_executable(C3 lab3/C.cpp)
add_executable(D3 lab3/D.cpp)
add_executable(E3 lab3/E.cpp)
add_executable(F3 lab3/F.cpp)

add_executable(A4 lab4/A.cpp)
add_executable(B4 lab4/B.cpp)
add_executable(D4 lab4/D.cpp)
add_executable(G lab3/G.cpp)

add_executable(test other_code/test.cpp)


