cmake_minimum_required(VERSION 3.23)
project(alg_labs)



add_executable(H2 lab2/H.cpp)
add_executable(I2 lab2/I.cpp)
add_executable(J2 lab2/J.cpp)
add_executable(K2 lab2/K.cpp)

add_executable(A3 lab3/A.cpp)
add_executable(B3 lab3/B.cpp)
add_executable(C3 lab3/C.cpp)
add_executable(D3 lab3/D.cpp)
add_executable(E3 lab3/E.cpp)
add_executable(F3 lab3/F.cpp)
add_executable(G3 lab3/G.cpp)

add_executable(A4 lab4/A.cpp)
add_executable(B4 lab4/B.cpp)
add_executable(C4 lab4/C.cpp)
add_executable(D4 lab4/D.cpp)

add_executable(A5 lab5/A.cpp)
add_executable(B5 lab5/B.cpp)
add_executable(C5 lab5/C.cpp)
add_executable(D5 lab5/D.cpp)
add_executable(E5 lab5/E.cpp)
add_executable(F5 lab5/F.cpp)

add_executable(A6 lab6/A.cpp)
add_executable(B6 lab6/B.cpp)

add_executable(B7 lab7/B.cpp)
add_executable(C7 lab7/C.cpp)

add_executable(A8 lab8/A.cpp)
add_executable(B8 lab8/B.cpp)
add_executable(C8 lab8/C.cpp)
add_executable(F8 lab8/F.cpp)

add_executable(A9 lab9/A.cpp)
add_executable(B9 lab9/B.cpp)
add_executable(C9 lab9/C.cpp)
add_executable(D9 lab9/D.cpp)

add_executable(A10 lab10/A.cpp)
add_executable(B10 lab10/B.cpp)


add_executable(test other_code/test.cpp)




